# parteipapagei

./: .gitattributes  .gitignore  CITATION.cff  README.md  about.md  data_protection.md  disclaimer.md  ingestion.py  party_data.py  profanity_words.txt  pyproject.toml  requirements.txt  st_app.py  st_chat.py  st_data_protection.py  st_informed_consent.py  utils.py
.streamlit/: config.toml
bm25-256/afd/: corpus.jsonl  corpus.mmindex.json  data.csc.index.npy  indices.csc.index.npy  indptr.csc.index.npy  params.index.json  vocab.index.json
bm25-256/bsw/: corpus.jsonl  corpus.mmindex.json  data.csc.index.npy  indices.csc.index.npy  indptr.csc.index.npy  params.index.json  vocab.index.json
bm25-256/cdu/: corpus.jsonl  corpus.mmindex.json  data.csc.index.npy  indices.csc.index.npy  indptr.csc.index.npy  params.index.json  vocab.index.json
bm25-256/fdp/: corpus.jsonl  corpus.mmindex.json  data.csc.index.npy  indices.csc.index.npy  indptr.csc.index.npy  params.index.json  vocab.index.json
bm25-256/grüne/: corpus.jsonl  corpus.mmindex.json  data.csc.index.npy  indices.csc.index.npy  indptr.csc.index.npy  params.index.json  vocab.index.json
bm25-256/linke/: corpus.jsonl  corpus.mmindex.json  data.csc.index.npy  indices.csc.index.npy  indptr.csc.index.npy  params.index.json  vocab.index.json
bm25-256/spd/: corpus.jsonl  corpus.mmindex.json  data.csc.index.npy  indices.csc.index.npy  indptr.csc.index.npy  params.index.json  vocab.index.json
sites/: about.md  data_protection.md  disclaimer.md  impressum.md  informed_consent.md
static/: sitemap.xml
(+58 files in other folders)
