[project]
name = "bundesbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pymupdf>=1.25.1",
    "chromadb>=0.5.23",
    "python-dotenv>=1.0.1",
    "llama-index>=0.12.5",
    "llama-index-embeddings-gemini>=0.3.0",
    "llama-index-vector-stores-chroma>=0.4.1",
    "llama-index-llms-gemini>=0.4.2",
    "simple-parsing>=0.1.6",
]

[dependency-groups]
dev = [
    "black>=24.10.0",
    "jupyter>=1.1.1",
]
